--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
         <form action="https://formsubmit.co/omeradamconcert@gmail.com" method="POST">
 
             <input type="hidden" name="_captcha" value="false">
-            <input type="hidden" name="_next" value="https://omeradam-paris-billets.com">
+            <input type="hidden" name="_next" value="https://omeradam-paris-billets.com/merci.html">
 
             <div class="input-group">
                 <input type="text" name="nom" placeholder="Nom" required>
@@ -361,4 +361,5 @@
     }
 </script>
 </body>
+
 </html>
