--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
         <p>LES BILLETS SERONT DISPONIBLES TRÈS PROCHAINEMENT...</p>
         <div class="lock-spinner"></div>
         <button id="alert-btn" class="gold-btn">M'INSCRIRE À L'ALERTE 🔔</button>
+        <div class="legal-disclaimer">
+    <p>⚠️ <strong>INFORMATION IMPORTANTE</strong></p>
+    <p>Ceci est un site de revente (conciergerie) et non le site officiel.</p>
+    <p style="margin-top: 5px; color: #D4AF37;">Les billets proposés sont 100% officiels et certifiés.</p>
+</div>
     </div>
+        
 </div>
 
     <div id="welcome-screen">
@@ -363,3 +369,4 @@
 </body>
 
 </html>
+
