--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="vMQCk0sUKCXJtxzv3JLkV6_mUISh0_vsvQ2SpJVU4H0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Billetterie Revendeur | OMER ADAM - Paris 2026</title>
     
@@ -369,4 +370,5 @@
 </body>
 
 </html>
+
 
