--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="google-site-verification" content="vMQCk0sUKCXJtxzv3JLkV6_mUISh0_vsvQ2SpJVU4H0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Billetterie Revendeur | OMER ADAM - Paris 2026</title>
+    <title>Billets OMER ADAM Paris 2026</title>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Syne:wght@400;700;800&display=swap" rel="stylesheet">
@@ -367,8 +367,15 @@
         if (event.target == modal) { modal.style.display = "none"; }
     }
 </script>
+    <div style="opacity: 0.1; height: 1px; overflow: hidden;">
+    <h1>Billets Concert Omer Adam Paris 2026</h1>
+    <p>Réservez vos places pour le concert événement d'Omer Adam à Paris. La star israélienne revient en France pour un show unique.</p>
+    <p>Date : 2026. Lieu : Paris. Billetterie officielle pour acheter vos tickets en catégorie Carré Or, Fosse et Gradins.</p>
+    <p>Inscrivez-vous à l'alerte pour l'ouverture de la vente des billets Omer Adam Paris.</p>
+</div>
 </body>
 
 </html>
+
 
 
