--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="google-site-verification" content="vMQCk0sUKCXJtxzv3JLkV6_mUISh0_vsvQ2SpJVU4H0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Billets OMER ADAM Paris 2026</title>
+    <meta name="description" content="Vente Billets OMER ADAM - Paris 2026. Le concert événement à l'Adidas Arena le 20 Janvier 2026. Places officielles, Carré Or et Fosse. Inscrivez-vous à l'alerte dès maintenant.">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Syne:wght@400;700;800&display=swap" rel="stylesheet">
@@ -376,6 +377,7 @@
 </body>
 
 </html>
+
 
 
 
