--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="google-site-verification" content="vMQCk0sUKCXJtxzv3JLkV6_mUISh0_vsvQ2SpJVU4H0" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/osaba9380-sys/omer-adam-2026/main/afficheconcert.png" />
+<meta name="thumbnail" content="https://raw.githubusercontent.com/osaba9380-sys/omer-adam-2026/main/afficheconcert.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Billets OMER ADAM Paris 2026</title>
     <meta name="description" content="Vente Billets OMER ADAM - Paris 2026. Le concert événement à l'Adidas Arena le 20 Janvier 2026. Places officielles, Carré Or et Fosse. Inscrivez-vous à l'alerte dès maintenant.">
@@ -377,6 +379,7 @@
 </body>
 
 </html>
+
 
 
 
