--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <button id="alert-btn" class="gold-btn">M'INSCRIRE À L'ALERTE 🔔</button>
         <div class="legal-disclaimer">
     <p>⚠️ <strong>INFORMATION IMPORTANTE</strong></p>
-    <p>Ceci est un site de revente (conciergerie) et non le site officiel.</p>
+    <p>Ceci est un site de revente pour le concert</p>
     <p style="margin-top: 5px; color: #D4AF37;">Les billets proposés sont 100% officiels et certifiés.</p>
 </div>
     </div>
@@ -379,6 +379,7 @@
 </body>
 
 </html>
+
 
 
 
