--- a/index.html
+++ b/index.html
@@ -77,6 +77,14 @@
         
         /* J'AI SUPPRIMÉ LE BLOCAGE DU DEFILEMENT ICI (body { overflow: hidden }) */
     </style>
+
+    <style>
+    html, body {
+        overflow: visible !important;
+        overflow-x: hidden !important; /* Garde juste ça pour éviter le scroll horizontal */
+        height: auto !important;
+    }
+</style>
 </head>
 <body>
 
@@ -337,3 +345,4 @@
     </div>
 </body>
 </html>
+
