--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                             <div><h4>Carré Or</h4><small>Au plus près d'Omer</small></div>
                         </div>
                         <div class="price-action">
-                            <span style="font-size: 0.8rem; font-weight: bold; color: #aaa;">BIENTÔT</span>
+                            <span style="font-size: 0.8rem; font-weight: bold; color: #aaa;">Sold Out</span>
                             <button class="btn-add" disabled style="background-color: #333; color: #555; cursor: not-allowed; border: 1px solid #444;"><i class="fas fa-lock"></i></button>
                         </div>
                     </div>
@@ -236,7 +236,7 @@
                             <div><h4>Fosse Debout</h4><small>Ambiance garantie</small></div>
                         </div>
                         <div class="price-action">
-                            <span style="font-size: 0.8rem; font-weight: bold; color: #aaa;">BIENTÔT</span>
+                            <span style="font-size: 0.8rem; font-weight: bold; color: #aaa;">Sold Out</span>
                             <button class="btn-add" disabled style="background-color: #333; color: #555; cursor: not-allowed; border: 1px solid #444;"><i class="fas fa-lock"></i></button>
                         </div>
                     </div>
@@ -246,7 +246,7 @@
                             <div><h4>Catégorie 1</h4><small>Assis numéroté</small></div>
                         </div>
                         <div class="price-action">
-                            <span style="font-size: 0.8rem; font-weight: bold; color: #aaa;">BIENTÔT</span>
+                            <span style="font-size: 0.8rem; font-weight: bold; color: #aaa;">Sold Out</span>
                             <button class="btn-add" disabled style="background-color: #333; color: #555; cursor: not-allowed; border: 1px solid #444;"><i class="fas fa-lock"></i></button>
                         </div>
                     </div>
@@ -256,7 +256,7 @@
                             <div><h4>Catégorie 2</h4><small>Vue panoramique</small></div>
                         </div>
                         <div class="price-action">
-                            <span style="font-size: 0.8rem; font-weight: bold; color: #aaa;">BIENTÔT</span>
+                            <span style="font-size: 0.8rem; font-weight: bold; color: #aaa;">Sold Out</span>
                             <button class="btn-add" disabled style="background-color: #333; color: #555; cursor: not-allowed; border: 1px solid #444;"><i class="fas fa-lock"></i></button>
                         </div>
                     </div>
@@ -373,3 +373,4 @@
     </div>
 </body>
 </html>
+
