--- a/index.html
+++ b/index.html
@@ -206,14 +206,14 @@
                         <text x="250" y="160" text-anchor="middle" fill="white" font-size="10" pointer-events="none">CARRÉ OR</text>
 
                         <path id="zone-fosse" d="M150,210 L350,210 L350,300 L150,300 Z" class="clickable-zone zone-fosse"/>
-                        <text x="250" y="260" text-anchor="middle" fill="white" font-size="10" pointer-events="none">FOSSE</text>
+                        <text x="250" y="260" text-anchor="middle" fill="white" font-size="10" pointer-events="none">VIP</text>
 
                         <path id="zone-cat1-L" d="M50,100 L140,100 L140,300 L50,300 Z" class="clickable-zone zone-cat1"/>
-                        <text x="95" y="200" text-anchor="middle" fill="white" font-size="10" pointer-events="none">CAT 1</text>
+                        <text x="95" y="200" text-anchor="middle" fill="white" font-size="10" pointer-events="none">CAT 1-2</text>
                         <path id="zone-cat1-R" d="M360,100 L450,100 L450,300 L360,300 Z" class="clickable-zone zone-cat1"/>
-                        <text x="405" y="200" text-anchor="middle" fill="white" font-size="10" pointer-events="none">CAT 1</text>
+                        <text x="405" y="200" text-anchor="middle" fill="white" font-size="10" pointer-events="none">CAT 3-4</text>
                         <path id="zone-cat2" d="M150,310 L350,310 L350,380 L150,380 Z" class="clickable-zone zone-cat2"/>
-                        <text x="250" y="350" text-anchor="middle" fill="white" font-size="10" pointer-events="none">CAT 2</text>
+                        <text x="250" y="350" text-anchor="middle" fill="white" font-size="10" pointer-events="none">CAT 5</text>
                     </svg>
                     <div class="tooltip" id="mapTooltip"></div>
                 </div>
@@ -233,7 +233,7 @@
                     <div class="category-row">
                         <div class="cat-info">
                             <span class="dot blue"></span>
-                            <div><h4>Fosse Debout</h4><small>Ambiance garantie</small></div>
+                            <div><h4>CarreVIP</h4><small>Ambiance garantie</small></div>
                         </div>
                         <div class="price-action">
                             <span style="font-size: 0.8rem; font-weight: bold; color: #aaa;">Sold Out</span>
@@ -243,7 +243,7 @@
                     <div class="category-row">
                         <div class="cat-info">
                             <span class="dot white"></span>
-                            <div><h4>Catégorie 1</h4><small>Assis numéroté</small></div>
+                            <div><h4>Catégorie 1-2</h4><small>Assis numéroté</small></div>
                         </div>
                         <div class="price-action">
                             <span style="font-size: 0.8rem; font-weight: bold; color: #aaa;">Sold Out</span>
@@ -253,7 +253,7 @@
                     <div class="category-row">
                         <div class="cat-info">
                             <span class="dot grey"></span>
-                            <div><h4>Catégorie 2</h4><small>Vue panoramique</small></div>
+                            <div><h4>Catégorie 3-4-5</h4><small>Vue panoramique</small></div>
                         </div>
                         <div class="price-action">
                             <span style="font-size: 0.8rem; font-weight: bold; color: #aaa;">Sold Out</span>
@@ -373,4 +373,5 @@
     </div>
 </body>
 </html>
+
 
