--- a/index.html
+++ b/index.html
@@ -414,5 +414,18 @@
         <p>Date : 2026. Lieu : Paris. Billetterie officielle pour acheter vos tickets en catégorie Carré Or, Fosse et Gradins.</p>
         <p>Inscrivez-vous à l'alerte pour l'ouverture de la vente des billets Omer Adam Paris.</p>
     </div>
+
+    <div id="stock-alert-modal" class="custom-modal">
+    <div class="modal-content">
+        <div class="icon-box">
+            <i class="fas fa-exclamation-circle"></i>
+        </div>
+        <h3>STOCK LIMITÉ</h3>
+        <p>Il ne reste qu'une <strong>seule place unique</strong>.</p>
+        <p class="sub-text">Impossible d'ajouter plus de billets au panier.</p>
+        <button onclick="closeStockAlert()">JE COMPRENDS</button>
+    </div>
+</div>
 </body>
 </html>
+
